--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,6 +15,12 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header class="header-box">
+    <div>
+      <h1 class="name-style">Juan Aleman</h1>
+      <h2 class="job-style">Full Stack Web Developer</h2>
+    </div>
+  </header>
 </body>
+
 </html>
