--- a/index.html
+++ b/index.html
@@ -53,8 +53,28 @@
     </section>
 
     <section class="experience-cont">
-      <div></div>
-      <div></div>
+      <div>
+        <h3>Skills</h3>
+        <ul>
+          <li>html5</li>
+          <li>CSS3</li>
+          <li>Less</li>
+          <li>Bootstrap</li>
+          <li>Javascript</li>
+          <li>Angular</li>
+          <li>MySQL</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Work Experience</h3>
+        <h4>Shaddai Solutions</h4>
+        <p>Junior Web Developer</p>
+        <p>Sept. 2018 - Present</p>
+
+        <h4>Molina Healthcare of Texas</h4>
+        <p>Community Engagement Coordinator</p>
+        <p>2011 - 2016</p>
+      </div>
     </section>
   </section>
 </body>
