Added Nestings, Mixins and Variables to Less
integrated some mixins to my code for the resume portion and nested all my code into the .container. I added and used different variables.

--- a/index.html
+++ b/index.html
@@ -15,68 +15,73 @@
 </head>
 
 <body>
-  <header class="header-box">
-    <img class="profile-pic" src="Images/palm.jpg" alt="">
-    <div>
-      <h1 class="name-style">Juan Aleman</h1>
-      <h2 class="job-style">Full Stack Web Developer</h2>
-    </div>
-  </header>
+  <div class="container">
+    <header class="header-box">
+      <img class="profile-pic" src="Images/palm.jpg" alt="">
+      <div>
+        <h1 class="name-style">Juan Aleman</h1>
+        <h2 class="job-style">Full Stack Web Developer</h2>
+      </div>
+    </header>
 
-  <section class="entire-resume">
-    <section class="profile-cont">
-      <div>
-        <h3>Personal Profile</h3>
-        <p>Extremely motivated to constantly develop my skills and grow professionally. I am confident in my ability to come up with interesting ideas for unforgettable web pages.</p>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <address>1010 W La Quinta Dr.
-          Pharr, TX 78577
-        </address>
-        <a href="email">Juan.J.Aleman@gmail.com</a>
-        <a href="phone">(956)212-8910</a>
-        <a href="LinkedIn">Icon</a>
-        <a href="GitHub">Icon</a>
-      </div>
-      <div>
-        <h3>Education</h3>
-        <h4>Lambda School</h4>
-        <p>March 2019 - Present</p>
-        <h4>Valley Technical Academy</h4>
-        <p>Certificate in Full Stack Web Development</p>
-        <p>June 2018 - Sept. 2019</p>
-        <h4>Texas Tech University</h4>
-        <p>Bachelor's in Public Relations</p>
-        <p>2003 - 2008</p>
-      </div>
+    <section class="entire-resume">
+      <section class="profile-cont">
+        <div>
+          <h3 class="resume-titles">Personal Profile</h3>
+          <p>Extremely motivated to constantly develop my skills and grow professionally. I am confident in my ability
+            to come up with interesting ideas for unforgettable web pages.</p>
+        </div>
+        <div>
+          <h3 class="resume-titles">Contact</h3>
+          <address>1010 W La Quinta Dr.
+            Pharr, TX 78577
+          </address>
+          <a href="email">Juan.J.Aleman@gmail.com</a>
+          <a href="phone">(956)212-8910</a>
+          <a href="LinkedIn">Icon</a>
+          <a href="GitHub">Icon</a>
+        </div>
+        <div>
+          <h3 class="resume-titles">Education</h3>
+          <h4>Lambda School</h4>
+          <p>March 2019 - Present</p>
+
+          <h4>Valley Technical Academy</h4>
+          <p>Certificate in Full Stack Web Development</p>
+          <p>June 2018 - Sept. 2019</p>
+          
+          <h4>Texas Tech University</h4>
+          <p>Bachelor's in Public Relations</p>
+          <p>2003 - 2008</p>
+        </div>
+      </section>
+
+      <section class="experience-cont">
+        <div>
+          <h3 class="resume-titles">Skills</h3>
+          <ul>
+            <li>html5</li>
+            <li>CSS3</li>
+            <li>Less</li>
+            <li>Bootstrap</li>
+            <li>Javascript</li>
+            <li>Angular</li>
+            <li>MySQL</li>
+          </ul>
+        </div>
+        <div>
+          <h3 class="resume-titles">Work Experience</h3>
+          <h4>Shaddai Solutions</h4>
+          <p>Junior Web Developer</p>
+          <p>Sept. 2018 - Present</p>
+
+          <h4>Molina Healthcare of Texas</h4>
+          <p>Community Engagement Coordinator</p>
+          <p>2011 - 2016</p>
+        </div>
+      </section>
     </section>
-
-    <section class="experience-cont">
-      <div>
-        <h3>Skills</h3>
-        <ul>
-          <li>html5</li>
-          <li>CSS3</li>
-          <li>Less</li>
-          <li>Bootstrap</li>
-          <li>Javascript</li>
-          <li>Angular</li>
-          <li>MySQL</li>
-        </ul>
-      </div>
-      <div>
-        <h3>Work Experience</h3>
-        <h4>Shaddai Solutions</h4>
-        <p>Junior Web Developer</p>
-        <p>Sept. 2018 - Present</p>
-
-        <h4>Molina Healthcare of Texas</h4>
-        <p>Community Engagement Coordinator</p>
-        <p>2011 - 2016</p>
-      </div>
-    </section>
-  </section>
+  </div>
 </body>
 
 </html>
