--- a/index.html
+++ b/index.html
@@ -28,38 +28,43 @@
       <section class="profile-cont">
         <div>
           <h3 class="resume-titles">Personal Profile</h3>
-          <p>Extremely motivated to constantly develop my skills and grow professionally. I am confident in my ability
+          <p class="resume-content">Extremely motivated to constantly develop my skills and grow professionally. I am
+            confident in my ability
             to come up with interesting ideas for unforgettable web pages.</p>
         </div>
         <div>
           <h3 class="resume-titles">Contact</h3>
-          <address>1010 W La Quinta Dr.
+          <address class="resume-content">1010 W La Quinta Dr.
             Pharr, TX 78577
           </address>
-          <a href="email">Juan.J.Aleman@gmail.com</a>
-          <a href="phone">(956)212-8910</a>
-          <a href="LinkedIn">Icon</a>
-          <a href="GitHub">Icon</a>
+          <div class="resume-content">
+            <a href="email">Juan.J.Aleman@gmail.com</a><br>
+            <a href="phone">(956)212-8910</a><br>
+            <a href="LinkedIn">Icon</a>
+            <a href="GitHub">Icon</a>
+          </div>
         </div>
         <div>
           <h3 class="resume-titles">Education</h3>
-          <h4>Lambda School</h4>
-          <p>March 2019 - Present</p>
+          <div class="resume-content">
+            <h4>Lambda School</h4>
+            <p>March 2019 - Present</p>
 
-          <h4>Valley Technical Academy</h4>
-          <p>Certificate in Full Stack Web Development</p>
-          <p>June 2018 - Sept. 2019</p>
-          
-          <h4>Texas Tech University</h4>
-          <p>Bachelor's in Public Relations</p>
-          <p>2003 - 2008</p>
+            <h4>Valley Technical Academy</h4>
+            <p>Certificate in Full Stack Web Development</p>
+            <p>June 2018 - Sept. 2019</p>
+
+            <h4>Texas Tech University</h4>
+            <p>Bachelor's in Public Relations</p>
+            <p>2003 - 2008</p>
+          </div>
         </div>
       </section>
 
       <section class="experience-cont">
         <div>
           <h3 class="resume-titles">Skills</h3>
-          <ul>
+          <ul class="resume-content">
             <li>html5</li>
             <li>CSS3</li>
             <li>Less</li>
@@ -71,13 +76,15 @@
         </div>
         <div>
           <h3 class="resume-titles">Work Experience</h3>
-          <h4>Shaddai Solutions</h4>
-          <p>Junior Web Developer</p>
-          <p>Sept. 2018 - Present</p>
+          <div class="resume-content">
+            <h4>Shaddai Solutions</h4>
+            <p>Junior Web Developer</p>
+            <p>Sept. 2018 - Present</p>
 
-          <h4>Molina Healthcare of Texas</h4>
-          <p>Community Engagement Coordinator</p>
-          <p>2011 - 2016</p>
+            <h4>Molina Healthcare of Texas</h4>
+            <p>Community Engagement Coordinator</p>
+            <p>2011 - 2016</p>
+          </div>
         </div>
       </section>
     </section>
