Add my profile picture and adjusted mobile version
gave style to the mobile version header portion

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="container">
     <header class="header-box">
-      <img class="profile-pic" src="Images/palm.jpg" alt="">
+      <img class="profile-pic" src="Images/juan.jpg" alt="">
       <div>
         <h1 class="name-style">Juan Aleman</h1>
         <h2 class="job-style">Full Stack Web Developer</h2>
@@ -41,7 +41,7 @@
             Pharr, TX 78577
           </address>
           <div class="resume-content">
-            <a href="email">Juan.J.Aleman@gmail.com</a><br>
+            <a href="email">Juan.J.Aleman@gmail.com</a><br><br>
             <a href="phone">(956)212-8910</a><br>
             <a href="LinkedIn">Icon</a>
             <a href="GitHub">Icon</a>
