--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
           </address>
           <div class="resume-content">
             <a href="email">Juan.J.Aleman@gmail.com</a><br><br>
-            <a href="phone">(956)212-8910</a><br>
-            <a href="LinkedIn">Icon</a>
-            <a href="GitHub">Icon</a>
+            <a href="#">(956)212-8910</a><br>
+            <a href="#">Icon</a>
+            <a href="#">Icon</a>
           </div>
         </div>
         <div>
           <h3 class="resume-titles">Education</h3>
           <div class="resume-content">
-            <h4>Lambda School</h4>
-            <p>March 2019 - Present</p>
+            <h4 class="small-headers">Lambda School</h4>
+            <p>March 2019 - Present</p><br>
 
-            <h4>Valley Technical Academy</h4>
+            <h4 class="small-headers">Valley Technical Academy</h4>
             <p>Certificate in Full Stack Web Development</p>
-            <p>June 2018 - Sept. 2019</p>
+            <p>June 2018 - Sept. 2019</p><br>
 
-            <h4>Texas Tech University</h4>
+            <h4 class="small-headers">Texas Tech University</h4>
             <p>Bachelor's in Public Relations</p>
-            <p>2003 - 2008</p>
+            <p>2003 - 2008</p><br>
           </div>
         </div>
       </section>
@@ -80,11 +80,11 @@
         <div>
           <h3 class="resume-titles">Work Experience</h3>
           <div class="resume-content">
-            <h4>Shaddai Solutions</h4>
+            <h4 class="small-headers">Shaddai Solutions</h4>
             <p>Junior Web Developer</p>
-            <p>Sept. 2018 - Present</p>
+            <p>Sept. 2018 - Present</p><br><br>
 
-            <h4>Molina Healthcare of Texas</h4>
+            <h4 class="small-headers">Molina Healthcare of Texas</h4>
             <p>Community Engagement Coordinator</p>
             <p>2011 - 2016</p>
           </div>
